# unlock-music

./: .drone.yml  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  babel.config.js  build-wasm  extension-manifest.json  jest.config.js  make-extension.js  package-lock.json  package.json  tsconfig.json  vue.config.js
.github/ISSUE_TEMPLATE/: ---.md  bug--.md  bug-report.md  new-feature.md
.github/workflows/: build.yml  deploy.yml  post-release.yml  release-build.yml  release-docker.yml  release.yml
.gitlab/ISSUE_TEMPLATE/: bug-report.md  new-feature.md
patches/: threads+1.7.0.patch
public/: index.html  ixarea-stats.js  loader.js  manifest.json
scripts/: build-and-package.sh  build-wasm.sh  upload-packages.sh
src/: App.vue  fix-compatibility.js  main.js  main.ts  registerServiceWorker.js  shims-browser-id3-writer.d.ts  shims-fs.d.ts  shims-tsx.d.ts
src/KgmWasm/: CMakeLists.txt  KgmLegacy.js  KgmWasm.cpp  KgmWasm.h  KgmWasm.js  KgmWasm.wasm  KgmWasmBundle.js  README.md  build-wasm  kgm.hpp
src/QmcWasm/: CMakeLists.txt  QmcLegacy.js  QmcWasm.cpp  QmcWasm.h  QmcWasm.js  QmcWasm.wasm  QmcWasmBundle.js  README.md  TencentTea.hpp  base64.hpp  build-wasm  qmc.hpp  qmc_cipher.hpp  qmc_key.hpp
src/__test__/: setup_jest.js
src/component/: ConfigDialog.vue  EditDialog.vue  FileSelector.vue  PreviewTable.vue  Ruby.vue  preview.vue  upload.vue  util.js  utils.ts  worker.ts
src/components/: HelloWorld.vue
src/decrypt/: common.js  common.ts  entity.ts  index.ts  joox.ts  kgm.js  kgm.ts  kgm_wasm.ts  kwm.js  kwm.ts  mflac.js  mg3d.ts  mgg.js  ncm.js  ncm.ts  ncmcache.ts  qmc.js  qmc.test.ts  qmc.ts  qmcMask.js  qmcMask.ts  qmc_cipher.test.ts  qmc_cipher.ts  qmc_key.test.ts  qmc_key.ts  qmc_wasm.ts  qmccache.ts  qmcv2.ts  raw.js  raw.ts  tm.js  tm.ts  util.js  utils.ts  ximalaya.ts  xm.js  xm.ts
src/decrypt/__test__/: QmcCache.test.ts  joox.test.ts
src/extension/: popup.html  popup.js
src/plugins/: element.js  mflac.js  ncm.js  qmc.js  raw.js
src/scss/: _dark-mode.scss  _element-ui-overrite.scss  _gaps.scss  _normal.scss  _utility.scss  _variables.scss  unlock-music.css  unlock-music.scss
src/utils/: MergeUint8Array.ts  api.ts  qm_meta.ts  storage.ts  tea.test.ts  tea.ts  utils.ts  worker.ts
src/utils/__mocks__/: qm_meta.ts  storage.ts
src/utils/storage/: BaseStorage.ts  BrowserNativeStorage.ts  ChromeExtensionStorage.ts  InMemoryStorage.ts  StorageFactory.ts
src/view/: Home.vue
